# projeto-ppp

./: Alunos.txt  CMakeLists.txt  Disciplinas.txt  Exames.txt  Exames_b.txt  Menus.c  Menus.h  main.c
Libraries/: Alunos.c  Alunos.h  Disciplinas.c  Disciplinas.h  Estruturas.h  Exames.c  Exames.h  Menus.c  Menus.h  Tempo.c  Tempo.h
Source Files/: Alunos.c  Alunos.h  Disciplinas.c  Estruturas.h  Exames.c  Exames.h  Ficheiros.c  Ficheiros.h  Menus.c  Menus.h  Protecoes.c  Protecoes.h  Tempo.c
